Fix in sidebar the margin that was hiding the bullet collapse button

--- a/masonry-main.css
+++ b/masonry-main.css
@@ -78,7 +78,7 @@ div.roam-app > div.flex-h-box > div.roam-main > div.roam-body-main {
 
 .sidebar-content > div:not(.rm-dnd-separator) > div:not(.rm-dnd-separator) > div:nth-child(2) > div:nth-child(2) > div:nth-child(2) {
     padding-bottom: 40px;
-    margin-left: -13px !important;
+    margin-left: -8px !important;
 }
 
 .sidebar-content .rm-reference-main > div {
